// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate to gherkin script works for a basic example with conditions 1`] = `
Map {
  "my-feature.feature" => "Feature: My Feature

  Scenario: Success
    Given I can see the start page
    When I tap the next button with good input
    Then I can see the success page
    And I see the first step of the success page

  Scenario: Failure
    Given I can see the start page
    When I tap the next button with bad input
    Then I see the failure page",
}
`;

exports[`xstate to gherkin works for a basic example with conditions 1`] = `
[
  {
    "feature": "My Feature",
    "scenarios": [
      {
        "scenario": "Success",
        "steps": [
          {
            "keyword": "Given",
            "step": "I can see the start page",
          },
          {
            "keyword": "When",
            "step": "I tap the next button with good input",
          },
          {
            "keyword": "Then",
            "step": "I can see the success page",
          },
          {
            "keyword": "And",
            "step": "I see the first step of the success page",
          },
        ],
      },
      {
        "scenario": "Failure",
        "steps": [
          {
            "keyword": "Given",
            "step": "I can see the start page",
          },
          {
            "keyword": "When",
            "step": "I tap the next button with bad input",
          },
          {
            "keyword": "Then",
            "step": "I see the failure page",
          },
        ],
      },
    ],
  },
]
`;

exports[`xstate to gherkin works for a basic example with transient transitions 1`] = `
[
  {
    "feature": "My Feature",
    "scenarios": [
      {
        "scenario": "Success",
        "steps": [
          {
            "keyword": "Given",
            "step": "I can see the start page",
          },
          {
            "keyword": "When",
            "step": "good input",
          },
          {
            "keyword": "Then",
            "step": "I can see the success page",
          },
          {
            "keyword": "And",
            "step": "I see the first step of the success page",
          },
        ],
      },
      {
        "scenario": "Failure",
        "steps": [
          {
            "keyword": "Given",
            "step": "I can see the start page",
          },
          {
            "keyword": "When",
            "step": "bad input",
          },
          {
            "keyword": "Then",
            "step": "I see the failure page",
          },
        ],
      },
    ],
  },
]
`;
